[인터셉터] 1.로그형식 완성
[암호화]
1.aes256 암호화 / 복호화 완성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,8 @@ server:
     include-stacktrace: never
     whitelabel:
       enabled: false
+
+
+secret:
+  aes256key: /F-JaNdRgUkXp2s5v8y/B?D(G+KbPeSh
+  iv: 5u8x/A%D*G-KaPdS
