[파일 위치 재구성]
[jwt]
1.jwt 프로퍼티 생성
1.JwtService value 프로퍼티로 수정

[token interceptor]
1.init
2.preprocessConfig 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,7 @@ server:
 secret:
   aes256key: /F-JaNdRgUkXp2s5v8y/B?D(G+KbPeSh
   iv: 5u8x/A%D*G-KaPdS
+
+jwt:
+  issuer: movie
+  secret: p2s5v8y/B?E(H+MbQeThWmZq4t6w9z$C
