[유저] 1. mongoDB 인덱싱을 위한 date 파라미터 변경 2. 출력 형식 변경 jackson implement

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // 추가 jackson
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8'
+
+
     // Mongo DB
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
